# Tauri-Rust-Printer

./: AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  test.txt
public/locales/: en.json  zh.json
scripts/: diagnose_mdns.py  diagnose_network.ps1  test_mdns.rs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/locales/: en.yml  zh.yml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  printer.rs  system.rs
src-tauri/src/models/: mod.rs  printer.rs
src-tauri/src/services/: airprint_server.rs  mdns_broadcaster.rs  mod.rs  print_job.rs  printer_detector.rs
src-tauri/src/services/ipp/: mod.rs  protocol.rs  server.rs
src-tauri/src/services/mdns/: broadcaster.rs  mod.rs
src/components/: LogPanel.ts  PrinterList.ts
src/i18n/: index.ts
src/services/: logService.ts  printerService.ts
src/utils/: helper.ts
