[package]
name = "airprinter"
version = "0.1.0"
description = "Share USB printers via AirPrint"
authors = ["you"]
edition = "2021"

[lib]
name = "airprinter"
path = "src/lib.rs"

[[bin]]
name = "airprinter"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
