[package]
name = "airprinter"
version = "0.1.0"
description = "Share USB printers via AirPrint"
authors = ["you"]
edition = "2021"

[lib]
name = "airprinter"
path = "src/lib.rs"

[[bin]]
name = "airprinter"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# mDNS 广播（使用 mdns-sd crate，跨平台）
mdns-sd = { version = "0.11", default-features = false }
# 用于获取本机 IP
local-ip-address = "0.6"
# HTTP 服务器（用于 IPP）
tiny_http = "0.12"

rand = "0.8"
ipp = "5.4.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[source.crates-io]
replace-with = 'tuna'

[source.tuna]
registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"

[http]
check-revoke = false
timeout = 60

[net]
git-fetch-with-cli = true
